[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "certwatch"
version = "0.2.0"
description = "Continuous TLS certificate monitoring and alerting, powered by certinspect."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Michele Angrisano", email = "michele.angrisano@gmail.com" }]
keywords = ["tls", "ssl", "x509", "certificate", "monitoring", "alerting", "pki"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Monitoring",
    "Topic :: Security",
]
dependencies = [
    "certinspect>=1.0.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.urls]
Homepage = "https://github.com/mangrisano/certwatch"
Repository = "https://github.com/mangrisano/certwatch"
Issues = "https://github.com/mangrisano/certwatch/issues"

[project.scripts]
certwatch = "certwatch.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
src = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
